Got it to the point it's working!!
Updated.  Working!!!!

--- a/movie-search/index.html
+++ b/movie-search/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+<div align="center">
+<head style="width:35%">
 	<title>Movie Search</title>
 </head>
 <body>
@@ -10,11 +11,12 @@
 		<button id="search-button">Search</button>
 	</form>
 	<hr>
-	<table>
+	<table style="width:35%">
 		<tbody></tbody>
 	</table>
 
 	<script src="jquery.js"></script>
 	<script src="scripts.js"></script>
 </body>
+</div>
 </html>
