--- a/movie-search/index.html
+++ b/movie-search/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html>
-<div align="center">
-<head style="width:35%">
-	<title>Movie Search</title>
-</head>
-<body>
-	<h1>Movie Search</h1>
-	<form id="search-form">
-		<input type="text" id="search-input">
-		<button id="search-button">Search</button>
-	</form>
-	<hr>
-	<table style="width:50%">
-		<tbody></tbody>
-	</table>
+<style>
+	.box{
+    	display: none;
+    	width: 100%
+    	height: 100%
+	}
 
-	<script src="jquery.js"></script>
-	<script src="scripts.js"></script>
-</body>
+	a:hover + .box,.box:hover{
+    	display: block;
+    	position: relative;
+    	z-index: 100;
+	}
+</style>
+<div align="center">
+	<head style="width:35%">
+		<title>Movie Title Search</title>
+	</head>
+	<body>
+		<h1>Movie Title Search</h1>
+		<form id="search-form">
+			<input type="text" id="search-input" size="35" placeholder="Type in all or part of the movie title...">
+			<button id="search-button">Search</button>
+		</form>
+		<hr>
+		<table style="width:50%">
+			<tbody></tbody>
+		</table>
+
+		<script src="jquery.js"></script>
+		<script src="scripts.js"></script>
+
+	</body>
 </div>
 </html>
